--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ django-embed-video==1.4.10
 django-debug-toolbar==4.3.0
 redis==5.0.4
 django-redisboard==8.4.0
-djangorestframework==3.15.1
+djangorestframework>=3.15.2,<4.0
 requests==2.31.0
 channels[daphne]==4.1.0
 channels-redis==4.2.0
